--- a/04_Fullstack/Aufgabe2/src/main/resources/templates/index.html
+++ b/04_Fullstack/Aufgabe2/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
 </head>
 <body>
-<div class="container-fluid">
+<div class="container-fluid text-center">
     <h1>Welcome to Melmis Application</h1>
     <a class="h2" th:href="@{/users}">Manage Users</a>
 </div>
